--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -130,37 +130,69 @@ main section h1{
     text-shadow: -.03em .03em 0 black;
 }
 
-main section div{
+main section ul{
     justify-self: center;
+    list-style: none;
 
-    width: fit-content;
-    max-width: 60vw;
+    /* width: fit-content; */
+    width: 50%;
+    /* width: fit-content; */
     height: fit-content;
 
-    padding: 1em 4em;
+    padding: .5em 2em;
 
     position: absolute;
     bottom: 0;
 
     border-radius: 5em;
+    /* overflow-y: hidden; */
     
     background-color: transparent;
+    /* background-color: red; */
 
     display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: .5em ;
 }
 
-main section div.start{
-    display: block;
+main section ul.start{
+    display: flex;
     background-color: var(--coption);
 }
 
-main section div p{
-    width: fit-content;
+main section ul li{
+    width: calc(100% - 2em);
     height: fit-content;
     font-size: 1.5em;
-    text-align: center;
+    /* text-align: center; */
 
     color: var(--coption-text);
+
+    display: flex;
+    align-items: center;
+    gap: .5em;
+}
+
+main section ul li div{
+    width: 2em;
+    aspect-ratio: 1/1;
+    /* background-color: blue; */
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+main section ul li div img{
+    width: 100%;
+    display: block;
+    
+    object-position: center;
+    object-fit: cover;
+}
+
+
+main section ul li p::before{
+    content: " - ";
 }
 
 
